text align fixed

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
 
 body {
     font-family: 'Montserrat-black', sans-serif;
+    text-align: center;
 }
 
 h3 {
